--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,7 +22,7 @@
                 </tbody>
             </table>
         <% } else { %>
-            <p class="text-center">No students found. Go <a href="/add" >here</a> to add players.</p>
+            <p class="text-center">No students found. Go <a href="/add" >here</a> to add students.</p>
         <% } %>
     </div>
 </div>
