Added Insert Class and View Class UI

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -27,4 +27,6 @@
     <nav class="navbar navbar-light bg-light">
         <span class="navbar-brand mb-0 h1" ><a href="/">Students DB</a></span>
         <a class="float-right" href="/add" title="Add a New Student">Add a Student</a>
+        <a class="float-right" href="/addClass" title="Add a New Class">Add a Class</a>
+        <a class="float-right" href="/Classes" title="View Classes">View Classes</a>
     </nav>
