added a TODO for class

--- a/views/view_classes.ejs
+++ b/views/view_classes.ejs
@@ -14,8 +14,8 @@
                             <th scope="row"><%= classelem.class_no %></th>
                             <td><%= classelem.class_title %></td>
                             <td>
-                                <a href="/edit/<%= classelem.class_no %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit</a>
-                                <a href="/delete/<%= classelem.class_no %>" class="btn btn-sm btn-danger">Delete</a>
+                                <a href="/editClass/<%= classelem.class_no %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit</a>
+                                <a href="/deleteClass/<%= classelem.class_no %>" class="btn btn-sm btn-danger">Delete</a>
                             </td>
                         </tr>
                     <% }) %>
