Added insert Professor and view professors

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,4 +29,6 @@
         <a class="float-right" href="/add" title="Add a New Student">Add a Student</a>
         <a class="float-right" href="/addClass" title="Add a New Class">Add a Class</a>
         <a class="float-right" href="/Classes" title="View Classes">View Classes</a>
+        <a class="float-right" href="/addProfessor" title="Add a New Professor">Add a Professor</a>
+        <a class="float-right" href="/Professors" title="View Professors">View Professors</a>
     </nav>
