--- a/views/insert_professor.ejs
+++ b/views/insert_professor.ejs
@@ -19,6 +19,9 @@
 							</div>
 							<div class="form-group col-md-4">
 								<input type="text" class="form-control" name="rating" id="rating" placeholder="Rating / 5" required>
+                            </div>
+                            <div class="form-group col-md-4">
+								<input type="text" class="form-control" name="review" id="review" placeholder="Review" required>
 							</div>
                 
             </div>
