--- a/views/view_professors.ejs
+++ b/views/view_professors.ejs
@@ -5,23 +5,19 @@
                 <thead class="thead-dark">
                     <tr>
                         <th scope="col">Professor Id</th>
-												<th scope="col">Class Number </th>
 												<th scope="col">First Name</th>
 												<th scope="col">Last Name</th>
-												<th scope="col">Rating</th>
                     </tr>
                 </thead>
                 <tbody>
                     <% professors.forEach((professor, index) => { %>
                         <tr>
-                            <th scope="row"><%= professor.prof_id %></th>
-														<td><%= professor.class_number %></td>
+                            <th scope="row"><%= professor.professor_id %></th>
 														<td><%= professor.first_name %></td>
 														<td><%= professor.last_name %></td>
-														<td><%= professor.rating %></td>
                             <td>
-                                <a href="/editProfessor/<%= professor.prof_id %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit</a>
-                                <a href="/deleteProfessor/<%= professor.prof_id %>" class="btn btn-sm btn-danger">Delete</a>
+                                <a href="/editProfessor/<%= professor.professor_id %>" target="_blank" rel="noopener" class="btn btn-sm btn-success">Edit</a>
+                                <a href="/deleteProfessor/<%= professor.professor_id %>" class="btn btn-sm btn-danger">Delete</a>
                             </td>
                         </tr>
                     <% }) %>
