updated edit for study

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,4 +33,5 @@
         <a class="float-right" href="/addProfessor" title="Add a New Professor">Add a Professor</a>
         <a class="float-right" href="/Professors" title="View Professors">View Professors</a>
         <a class="float-right" href="/Reviews" title="View Reviews">View Reviews</a>
+        <a class="float-right" href="/Study" title="View Resources">View Resources</a>
     </nav>
