--- a/views/view_study.ejs
+++ b/views/view_study.ejs
@@ -24,7 +24,7 @@
                 </tbody>
             </table>
         <% } else { %>
-            <p class="text-center">No Resources found. Go <a href="/addProfessor" >here</a> to add Resources.</p>
+            <p class="text-center">No Resources found. Go <a href="/addStudy" >here</a> to add Resources.</p>
         <% } %>
     </div>
 </div>
