--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,5 +28,9 @@
         <span class="navbar-brand mb-0 h1" ><a href="/">Students DB</a></span>
         <a class="float-right" href="/add" title="Add a New Student">Add a Student</a>
         <a class="float-right" href="/addClass" title="Add a New Class">Add a Class</a>
+        <a class="float-right" href="/addStudy" title="Add a New Resource to a class">Add a Link_to_a_study_resource</a>
         <a class="float-right" href="/Classes" title="View Classes">View Classes</a>
+        <a class="float-right" href="/addProfessor" title="Add a New Professor">Add a Professor</a>
+        <a class="float-right" href="/Professors" title="View Professors">View Professors</a>
+        <a class="float-right" href="/Reviews" title="View Reviews">View Reviews</a>
     </nav>
