--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -34,5 +34,7 @@
         <a class="float-right" href="/Professors" title="View Professors">View Professors</a>
         <a class="float-right" href="/Reviews" title="View Reviews">View Reviews</a>
         <a class="float-right" href="/Study" title="View Resources">View Resources</a>
-        <a class="float-right" href="/Average" title="Average">Average Rating</a>
+        <a class="float-right" href="/Average" title="Average">Average Rating of a Professor</a>
+        <a class="float-right" href="/AverageRat" title="Average">Average Rating of a Class</a>
+        <a class="float-right" href="/MostRat" title="Average">Number of Reviews of a Class</a>
     </nav>
