added another report

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,5 +36,6 @@
         <a class="float-right" href="/Study" title="View Resources">View Resources</a>
         <a class="float-right" href="/Average" title="Average">Average Rating of a Professor</a>
         <a class="float-right" href="/AverageRat" title="Average">Average Rating of a Class</a>
-        <a class="float-right" href="/MostRat" title="Average">Number of Reviews of a Class</a>
+        <a class="float-right" href="/MostRat" title="Most">Number of Reviews of a Class</a>
+        <a class="float-right" href="/TotClas" title="Total">Total number of Classes</a>
     </nav>
